force-app/main/default/objects/Knowledge_Day_Voting_Group_Member__c/Knowledge_Day_Voting_Group_Member__c.object-meta.xml
<CustomObject>
    <label>Knowledge Day Voting Group Member</label>
    <nameField>
        <displayFormat>VGM-{0000}</displayFormat>
        <label>Knowledge Day Voting Group Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Day Voting Group Member</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>