force-app/main/default/objects/Knowledge_Day_Voting_Group_Member__c/fields/Has_Voted__c.field-meta.xml
<CustomField>
    <fullName>Has_Voted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Voted</label>
    <type>Checkbox</type>
</CustomField>