force-app/main/default/objects/Knowledge_Day_Voting_Group_Member__c/fields/Is_Judge__c.field-meta.xml
<CustomField>
    <fullName>Is_Judge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Judge</label>
    <type>Checkbox</type>
</CustomField>