force-app/main/default/objects/Knowledge_Day_Voting_Group_Member__c/fields/Is_Presenter__c.field-meta.xml
<CustomField>
    <fullName>Is_Presenter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Presenter</label>
    <type>Checkbox</type>
</CustomField>