force-app/main/default/objects/Knowledge_Day_Voting_Group_Member__c/fields/IsVoting__c.field-meta.xml
<CustomField>
    <fullName>IsVoting__c</fullName>
    <formula>Voting_Group__r.IsVoting__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voting</label>
    <type>Checkbox</type>
</CustomField>