force-app/main/default/objects/Knowledge_Day_Voting_Group_Member__c/fields/Knowledge_Day_Member__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Day_Member__c</fullName>
    <label>Knowledge Day Member</label>
    <referenceTo>Knowledge_Day_Member__c</referenceTo>
    <relationshipLabel>Knowledge Day Voting Group Member</relationshipLabel>
    <relationshipName>Knowledge_Day_Voting_Group_Member</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>