force-app/main/default/objects/Knowledge_Day_Voting_Group_Member__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+ Knowledge_Day_Member__r.User__r.Id,  Knowledge_Day_Member__r.User__r.FirstName +&quot; &quot;+ Knowledge_Day_Member__r.User__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User</label>
    <type>Text</type>
</CustomField>