force-app/main/default/objects/Knowledge_Day_Voting_Group_Member__c/fields/Voting_Group__c.field-meta.xml
<CustomField>
    <fullName>Voting_Group__c</fullName>
    <label>Voting Group</label>
    <referenceTo>Knowledge_Day_Voting_Group__c</referenceTo>
    <relationshipLabel>Knowledge Day Voting Group Member</relationshipLabel>
    <relationshipName>Knowledge_Day_Voting_Group_Member</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>