force-app/main/default/objects/Knowledge_Day_Voting_Group_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Knowledge_Day_Member__c</columns>
    <columns>Voting_Group__c</columns>
    <columns>Is_Judge__c</columns>
    <columns>Is_Presenter__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>